# Clean-multimodel-arch

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build.gradle  gradle.properties  settings.gradle
app/src/main/: BUILD.bazel
app/src/main/java/com/example/eugene_matsyuk/dagger_arch/: DaggerArchApplication.java  DaggerArchApplication.kt
app/src/main/java/com/example/eugene_matsyuk/dagger_arch/di/: DiConstants.kt  FeatureProxyInjector.kt
app/src/main/java/com/example/eugene_matsyuk/dagger_arch/routing/: GlobalNavigator.kt  GlobalScreenNames.kt
core-db/src/main/: BUILD.bazel
core-db/src/main/java/com/example/core_db_api/: BUILD.bazel  DbClient.kt
core-db/src/main/java/com/example/core_db_api/data/: DbClient.kt
core-db/src/main/java/com/example/core_db_api/di/: CoreDbApi.kt
core-db/src/main/java/com/example/core_db_di/: BUILD.bazel  CoreDbApi.kt  CoreDbComponent.kt  DbModule.kt
core-db/src/main/java/com/example/core_db_impl/: BUILD.bazel  DbClientImpl.kt
core-db/src/main/java/com/example/core_db_impl/data/: DbClientImpl.kt
core-db/src/main/java/com/example/core_db_impl/di/: CoreDbComponent.kt  DbModule.kt
core-network/src/main/: BUILD.bazel
core-network/src/main/java/com/example/core_network_api/: BUILD.bazel
core-network/src/main/java/com/example/core_network_api/data/: HttpClient.kt  HttpClientApi.kt
core-network/src/main/java/com/example/core_network_api/di/: CoreNetworkApi.kt
core-network/src/main/java/com/example/core_network_di/: BUILD.bazel  CoreNetworkApi.kt  CoreNetworkComponent.kt  NetworkModule.kt
core-network/src/main/java/com/example/core_network_impl/: BUILD.bazel  HttpClientImpl.kt
core-network/src/main/java/com/example/core_network_impl/data/: HttpClientImpl.kt
core-network/src/main/java/com/example/core_network_impl/di/: CoreNetworkComponent.kt  NetworkModule.kt
core-utils/src/main/: BUILD.bazel
core-utils/src/main/java/com/example/core/di/app/: CoreUtilsApi.kt  CoreUtilsComponent.kt
core-utils/src/main/java/com/example/core/utils/: SomeUtils.kt
feature-antitheft/src/main/java/com/example/antitheft_api/: AntitheftFeatureApi.kt  AntitheftStarter.kt  BUILD.bazel
feature-antitheft/src/main/java/com/example/antitheft_di/: AntitheftFeatureComponent.kt  AntitheftFeatureComponentHolder.kt  AntitheftFeatureDependencies.kt  AntitheftFeatureModule.kt  AntitheftNavigationModule.kt  BUILD.bazel
feature-antitheft/src/main/java/com/example/antitheft_impl/domain/api/: AntitheftInteractor.kt  AntitheftRepository.kt  BUILD.bazel
feature-antitheft/src/main/java/com/example/antitheft_impl/domain/impl/: AntitheftInteractorImpl.kt  BUILD.bazel
feature-antitheft/src/main/java/com/example/antitheft_impl/presentation/: BUILD.bazel
feature-antitheft/src/main/java/com/example/antitheft_impl/presentation/presenter/: AntitheftPresenter.kt
feature-antitheft/src/main/java/com/example/antitheft_impl/presentation/routing/: AntitheftRoutingScreens.kt
feature-antitheft/src/main/java/com/example/antitheft_impl/presentation/start/: AntitheftStarterImpl.kt
feature-antitheft/src/main/java/com/example/antitheft_impl/presentation/view/: AntitheftActivity.kt  AntitheftHelpFragment.kt  AntitheftMainFragment.kt  AntitheftMainView.kt
feature-antitheft/src/main/java/com/example/antitheft_impl/repositories_impl/: AntitheftRepositoryImpl.kt  BUILD.bazel
feature-purchase-api/src/main/: BUILD.bazel
feature-purchase-api/src/main/java/com/example/purchase_api/: PurchaseFeatureApi.kt
feature-purchase-api/src/main/java/com/example/purchase_api/domain/models/: PurchaseModel.kt
feature-purchase-impl/src/main/: AndroidManifest.xml  BUILD.bazel
feature-purchase-impl/src/main/java/com/example/purchase_impl/data/: PurchaseRepositoryImpl.kt
feature-purchase-impl/src/main/java/com/example/purchase_impl/di/: PurchaseComponent.java  PurchaseComponent.kt  PurchaseComponentHolder.kt  PurchaseFeatureDependencies.kt  PurchaseModule.kt
feature-purchase-impl/src/main/java/com/example/purchase_impl/domain/: PurchaseInteractorImpl.kt  PurchaseRepository.kt
feature-scanner-example/src/main/: AndroidManifest.xml  BUILD.bazel
feature-scanner-example/src/main/java/com/example/scanner_example/: ScannerExampleApplication.java  ScannerExampleApplication.kt
feature-scanner-example/src/main/java/com/example/scanner_example/di/: ScannerFeatureDependenciesFake.kt
feature-scanner-example/src/main/java/com/example/scanner_example/fake/: DbClientFake.kt  HttpClientFake.kt  PurchaseInteractorFake.kt
feature-scanner/src/main/: AndroidManifest.xml  BUILD.bazel
feature-scanner/src/main/java/com/example/feature_scanner_api/: ScannerFeatureApi.kt  ScannerStarter.kt
feature-scanner/src/main/java/com/example/scanner/data/: ScannerRepositoryImpl.kt
feature-scanner/src/main/java/com/example/scanner/di/: ScannerFeatureComponent.kt  ScannerFeatureComponentHolder.kt  ScannerFeatureDependencies.kt  ScannerFeatureModule.kt  ScreenNavigationModule.kt
feature-scanner/src/main/java/com/example/scanner/presentation/presenter/: ScannerPresenter.kt
feature-scanner/src/main/java/com/example/scanner/presentation/view/: ScannerActivity.kt  ScannerHelpFragment.kt  ScannerMainFragment.kt  ScannerMainView.kt
feature-scanner/src/main/java/com/example/scanner/routing/: ScannerRoutingScreens.kt
feature-scanner/src/main/java/com/example/scanner_api/: ScannerFeatureApi.kt  ScannerStarter.kt
feature-scanner/src/main/java/com/example/scanner_impl/data/: ScannerRepositoryImpl.kt
feature-scanner/src/main/java/com/example/scanner_impl/di/: ScannerFeatureComponent.kt  ScannerFeatureComponentHolder.kt  ScannerFeatureDependencies.kt  ScannerFeatureModule.kt  ScannerScreenComponent.kt  ScreenNavigationModule.kt
feature-scanner/src/main/java/com/example/scanner_impl/domain/: ScannerInteractor.kt  ScannerInteractorImpl.kt  ScannerRepository.kt
feature-scanner/src/main/java/com/example/scanner_impl/routing/: ScannerRoutingScreens.kt
feature-scanner/src/main/java/com/example/scanner_impl/start/: ScannerStarterImpl.kt
feature-scanner/src/main/res/values/: strings.xml
(+128 files in other folders)
