load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()

load("@rules_java//java:defs.bzl", "java_plugin")

java_plugin(
    name = "moxy_compiler",
    neverlink = True,
    processor_class = "moxy.compiler.MvpCompiler",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_github_moxy_community_moxy_compiler",
    ],
)
