load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "24",
        "targetSdkVersion": "29",
    },
    deps = [
        ":app-main",
    ],
)

kt_android_library(
    name = "app-main",
    srcs = glob(["java/**/*.kt"]),
    custom_package = "com.example.eugene_matsyuk.dagger_arch",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        "//core-db/src/main/java/com/example/core_db_api:core-db-api",
        "//core-db/src/main/java/com/example/core_db_di:core-db-di",
        "//core-network/src/main/java/com/example/core_network_api:core-network-api",
        "//core-network/src/main/java/com/example/core_network_di:core-network-di",
        "//core-utils/src/main:core-utils",
        "//deps:dagger",
        "//deps:moxy_compiler",
        "//feature-antitheft/src/main/java/com/example/antitheft_api:feature-antitheft-api",
        "//feature-antitheft/src/main/java/com/example/antitheft_di:feature-antitheft-di",
        "//feature-purchase-api/src/main:feature-purchase-api",
        "//feature-purchase-impl/src/main:feature-purchase-impl",
        "//feature-scanner/src/main:feature-scanner",
        "//module-injector/src/main:module_injector",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_core_core",
        "@maven//:androidx_fragment_fragment",
        "@maven//:androidx_lifecycle_lifecycle_common",
        "@maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@maven//:androidx_savedstate_savedstate",
        "@maven//:com_github_moxy_community_moxy",
        "@maven//:com_github_moxy_community_moxy_androidx",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "@maven//:io_reactivex_rxjava2_rxjava",
        "@maven//:javax_inject_javax_inject",
        "@maven//:ru_terrakok_cicerone_cicerone",
    ],
)
