load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "core-network",
    srcs = glob([
        "**/*.kt",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//:dagger",
        "//module-injector/src/main:module_injector",
        "@maven//:io_reactivex_rxjava2_rxjava",
    ],
)
