load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "core-utils",
    srcs = glob([
        "**/*.kt",
        "**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//deps:dagger",
        "//module-injector/src/main:module_injector",
    ],
)
