load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

android_binary(
    name = "scanner_example",
    manifest = "AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "24",
        "targetSdkVersion": "29",
    },
    deps = [
        ":feature-antitheft",
    ],
)

kt_android_library(
    name = "feature-antitheft",
    srcs = glob(["java/**/*.kt"]),
    custom_package = "com.example.antitheft_api",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        "//core-db/src/main:core-db",
        "//core-network/src/main:core-network",
        "//core-utils/src/main:core-utils",
        "//deps:dagger",
        "//deps:moxy_compiler",
        "//feature-purchase-api/src/main:feature-purchase-api",
        "//feature-scanner/src/main:feature-scanner",
        "//module-injector/src/main:module_injector",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_core_core",
        "@maven//:androidx_fragment_fragment",
        "@maven//:androidx_lifecycle_lifecycle_common",
        "@maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@maven//:androidx_savedstate_savedstate",
        "@maven//:com_github_moxy_community_moxy",
        "@maven//:com_github_moxy_community_moxy_androidx",
        "@maven//:io_reactivex_rxjava2_rxandroid",
        "@maven//:io_reactivex_rxjava2_rxjava",
        "@maven//:ru_terrakok_cicerone_cicerone",
    ],
)
