load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "core-db-di",
    srcs = glob([
        "**/*.kt",
        "**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//core-db/src/main/java/com/example/core_db_api:core-db-api",
        "//core-db/src/main/java/com/example/core_db_impl:core-db-impl",
        "//deps:dagger",
        "//module-injector/src/main:module_injector",
    ],
)

package_group(
    name = "db-di",
    packages = [
        "//core-db/src/main/java/com/example/core_db_di",
    ],
)
