load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "core-db-impl",
    srcs = glob([
        "**/*.kt",
        "**/*.java",
    ]),
    visibility = ["//core-db/src/main/java/com/example/core_db_di:db-di"],
    deps = [
        "//core-db/src/main/java/com/example/core_db_api:core-db-api",
    ],
)
