load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "core-network-di",
    srcs = glob([
        "**/*.kt",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//core-network/src/main/java/com/example/core_network_api:core-network-api",
        "//core-network/src/main/java/com/example/core_network_impl:core-network-impl",
        "//deps:dagger",
        "//module-injector/src/main:module_injector",
    ],
)

package_group(
    name = "network-di",
    packages = [
        "//core-network/src/main/java/com/example/core_network_di",
    ],
)
