load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "core-network-impl",
    srcs = glob([
        "**/*.kt",
    ]),
    visibility = ["//core-network/src/main/java/com/example/core_network_di:network-di"],
    deps = [
        "//core-network/src/main/java/com/example/core_network_api:core-network-api",
        "@maven//:io_reactivex_rxjava2_rxjava",
    ],
)
