load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "antitheft_domain_api",
    srcs = glob(["**/*.kt"]),
    visibility = [
        "//feature-antitheft/src/main/java/com/example/antitheft_impl/domain/impl:__subpackages__",
        "//feature-antitheft/src/main/java/com/example/antitheft_impl/presentation:__subpackages__",
        "//feature-antitheft/src/main/java/com/example/antitheft_impl/repositories_impl:__subpackages__",
    ],
    deps = [
        "@maven//:io_reactivex_rxjava2_rxjava",
    ],
)
