load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "antitheft_domain_impl",
    srcs = glob(["**/*.kt"]),
    visibility = ["//feature-antitheft/src/main/java/com/example/antitheft_di:__pkg__"],
    deps = [
        "//feature-antitheft/src/main/java/com/example/antitheft_impl/domain/api:antitheft_domain_api",
        "@maven//:io_reactivex_rxjava2_rxjava",
    ],
)
